# gambier

./: Cargo.toml  README.md  run.cap
assets/: BoomBoxWithAxes.gltf  box.glb  box.gltf
src/: buffer.rs  camera.rs  camera_controller.rs  frame.rs  image.rs  main.rs  memory.rs  model.rs  swapchain.rs  sync_structures.rs  texture.rs  timer.rs  vertex.rs  vulkan_context.rs
src/shaders/: colored_triangle.frag  colored_triangle.vert  common.glsl  pbr.frag  red_triangle.frag  render.comp  render.frag  render.vert  triangle.frag  triangle.vert
