[package]
description = "An experimental Vulkan renderer"
edition = "2021"
name = "gambier"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37"
ash-window = "0.10"
gltf = "1.0"
id-arena = "2.2.1"
image = "0.24"
nalgebra-glm = "0.16"
vk-shader-macros = "0.2.8"
winit = "0.26.1"
